[OTA-2322] fix navbar wrapping to a new line

--- a/ota-plus-web/app/reactapp/style/ota-default/common.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/common.scss
@@ -595,6 +595,12 @@ input {
       }
     }
   }
+
+  @media only screen and (max-width: 1390px) {
+    #navbar > .navbar-nav > li > a {
+      padding: 15px 12px;
+    }
+  }
 }
 
 .menu-login-clickable {
